[gd_scene load_steps=8 format=3 uid="uid://ccxi8s330l0y3"]

[ext_resource type="Theme" uid="uid://cwmjrgohke0do" path="res://theme/main_theme.tres" id="1_6aqax"]
[ext_resource type="Script" path="res://view/edit_timer_group_view/edit_timer_group_view.gd" id="2_68vem"]
[ext_resource type="Shader" path="res://shader/panel_blur.gdshader" id="3_vyu4b"]
[ext_resource type="PackedScene" uid="uid://dfqe06eonvy7d" path="res://component/color_picker/color_picker.tscn" id="4_6np0l"]
[ext_resource type="Texture2D" uid="uid://b6txu33u206n6" path="res://asset/img/button-done.png" id="5_v1pgo"]
[ext_resource type="Texture2D" uid="uid://dv75b3svu28k2" path="res://asset/img/icon-delete.png" id="6_ddnma"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ofj8m"]
shader = ExtResource("3_vyu4b")
shader_parameter/panel_color = null
shader_parameter/alpha = 0.5

[node name="EditGroupView" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_6aqax")
script = ExtResource("2_68vem")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 60

[node name="Label" type="Label" parent="MarginContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Add A New Timer Group"
horizontal_alignment = 1

[node name="TitleLineEdit" type="LineEdit" parent="MarginContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 80
placeholder_text = "Title"
alignment = 1

[node name="TimerGroupSetupHBox" type="HBoxContainer" parent="MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="SequentialCheckBox" type="CheckBox" parent="MarginContainer/MarginContainer/VBoxContainer/TimerGroupSetupHBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Sequential"

[node name="ColorPicker" parent="MarginContainer/MarginContainer/VBoxContainer" instance=ExtResource("4_6np0l")]
unique_name_in_owner = true
layout_mode = 2

[node name="Spacer" type="Control" parent="MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="OkButton" type="Button" parent="MarginContainer/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
disabled = true
text = "Ok
"
icon = ExtResource("5_v1pgo")

[node name="DeleteButton" type="Button" parent="MarginContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
icon = ExtResource("6_ddnma")

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
visible = false
material = SubResource("ShaderMaterial_ofj8m")
layout_mode = 2

[connection signal="text_changed" from="MarginContainer/MarginContainer/VBoxContainer/TitleLineEdit" to="." method="_on_title_line_edit_text_changed"]
[connection signal="color_selected" from="MarginContainer/MarginContainer/VBoxContainer/ColorPicker" to="." method="_on_color_picker_color_selected"]
[connection signal="pressed" from="MarginContainer/MarginContainer/VBoxContainer/HBoxContainer/OkButton" to="." method="_on_ok_button_pressed"]
[connection signal="pressed" from="MarginContainer/MarginContainer/VBoxContainer/HBoxContainer/DeleteButton" to="." method="_on_delete_button_pressed"]
